@@ -1,5 +1,6 @@
 usr/bin
 usr/lib/coq/contrib/micromega
+usr/share/coq
 usr/share/man/man1
 usr/share/pixmaps
 usr/share/texmf/tex/latex/misc
