@@ -5,8 +5,9 @@ coq (8.2-1+dfsg-1) UNRELEASED; urgency=low
 
   [ Samuel Mimram ]
   * Use variables from dh-ocaml in rules.
+  * Added coqvars.mk helper for coq-related packages.
 
- -- Samuel Mimram <smimram@debian.org>  Thu, 19 Feb 2009 13:27:14 +0100
+ -- Samuel Mimram <smimram@debian.org>  Thu, 19 Feb 2009 13:54:38 +0100
 
 coq (8.2~rc2+dfsg-3) experimental; urgency=low
 
